changes for designs and add new pages

--- a/src/app/layouts/category-navbar/category-navbar.component.css
+++ b/src/app/layouts/category-navbar/category-navbar.component.css
@@ -6,5 +6,6 @@ nav {
 
 .nav-link {
    text-transform: uppercase;
-   color: var(--body-text-color);
+   color: var(--primary-color);
+   font-weight: bold;
 }
