--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -6,22 +6,22 @@
             <div class="nav justify-content-center">
                <ul class="nav justify-content-center">
                   <li class="nav-item">
-                     <a href="" class="nav-link">Home</a>
+                     <a href="" class="nav-link" routerLink="/">Home</a>
                   </li>
                   
                   <li class="nav-item">
-                     <a href="" class="nav-link">About</a>
+                     <a href="" class="nav-link" routerLink="/about">About</a>
                   </li>
                   
                   <li class="nav-item">
-                     <a href="" class="nav-link">Terms & Conditions</a>
+                     <a href="" class="nav-link" routerLink="/terms-and-condtions">Terms & Conditions</a>
                   </li>
                   <li class="nav-item">
-                     <a href="" class="nav-link">Contact us</a>
+                     <a href="" class="nav-link" routerLink="/contact">Contact us</a>
                   </li>
                </ul>
             </div>
-            <p class="md-2 mt-2">Copyright @ 2023 Code mastery lab</p>
+            <p style="margin-top: 20px;">Copyright @ 2023 Code mastery lab</p>
          </div>
       </div>
    </div>
