--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,13 +1,42 @@
 <section class="mt-5">
    <div class="container mt-5 mb-5 p-5 bg-theme">
       <h1 class="text-white text-center">About us</h1>
-        
+
       <div class="p-5 mt-4 bg-secondary-theme text-theme-primary">
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium eius doloremque expedita atque sed, cupiditate at? Iure sed, placeat optio atque tempore, eius eveniet quas doloribus quidem nam, saepe veritatis.</p>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium eius doloremque expedita atque sed, cupiditate at? Iure sed, placeat optio atque tempore, eius eveniet quas doloribus quidem nam, saepe veritatis.</p>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium eius doloremque expedita atque sed, cupiditate at? Iure sed, placeat optio atque tempore, eius eveniet quas doloribus quidem nam, saepe veritatis.</p>
+         <p>Welcome to Code Mastery Lab, your hub for exploration, learning, and growth!</p>
+
+         <h2>Our Vision</h2>
+         <p>We envision a future where knowledge knows no bounds. Our commitment lies in breaking down barriers to
+            education and making learning accessible to all. We believe in the transformative power of information and
+            the boundless potential it holds.</p>
+
+         <h2>What We Offer</h2>
+         <ul>
+            <li><strong>Technology & Coding:</strong> Delve into the digital realm with our comprehensive tutorials and
+               articles that demystify the world of technology and coding.</li>
+            <li><strong>Health & Well-being:</strong> Explore our insights into health, fitness, and holistic living.
+            </li>
+            <li><strong>Fashion & Style:</strong> Discover the art of self-expression through fashion.</li>
+            <li><strong>Sports & Adventure:</strong> Dive into the world of sports and adventure with our articles that
+               capture the thrill of the game and the spirit of exploration.</li>
+         </ul>
+
+         <h2>Our Team</h2>
+         <p>Behind every word and tutorial lies a team of passionate individuals who are experts in their respective
+            fields. We're united by a shared love for knowledge and a dedication to empowering our readers.</p>
+
+         <h2>Join Us on the Journey</h2>
+         <p>Join us on this exhilarating journey of discovery and growth. Explore, learn, and evolve with us as we
+            traverse the vast landscape of information and inspiration.</p>
+
+         <h2>Contact Us</h2>
+         <p>Have questions, feedback, or ideas? Reach out to us anytime. We're here to connect, learn, and collaborate.
+         </p>
+
+         <p>Thank you for being a part of Code Mastery Lab. Let's explore, learn, and thrive together.</p>
+
          <div class="text-center">
-            <button class="btn btn-info btn-sm mt-4 btn-theme">Back to Home</button>
+            <button class="btn btn-info btn-sm mt-4 btn-theme" routerLink="/">Back to Home</button>
          </div>
       </div>
    </div>
