--- a/src/app/layouts/header/header.component.css
+++ b/src/app/layouts/header/header.component.css
@@ -1,17 +1,11 @@
 header {
    height: 100px;
-   background-color: #010536;
+   background-color: var(--secondary-color);
 }
 
 .site-logo {
-   font-size: 4.5em;
-   background-color: #010536;
-   color: #f8f8f8;
+   font-size: 2.5em;
 }
 .slogan {
-   font-size: 1.5em;
-   color: #f8f8f8;
-}
-.container {
-   display: contents;
+   font-size: 1em;
 }
