--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -1,1 +1,30 @@
-<p>contact-us works!</p>
+<section class="mt-5">
+   <div class="container mt-5 mb-5 p-5 bg-theme">
+      <h1 class="text-white text-center">Contact us</h1>
+
+      <div class="p-5 mt-4 bg-secondary-theme text-theme-primary">
+         <div *ngIf="submitted; else contactFormSection">
+            <p>Your message has been submitted successfully! Thank you for contacting us.</p>
+         </div>
+         <ng-template #contactFormSection>
+            <p class="text-center">If you have any questions, feedback, or ideas, feel free to get in touch with us!</p>
+            <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+               <label for="name">Name:</label>
+               <input type="text" id="name" name="name" formControlName="name" required>
+
+               <label for="email">Email:</label>
+               <input type="email" id="email" name="email" formControlName="email" required>
+
+               <label for="message">Message:</label>
+               <textarea id="message" name="message" formControlName="message" rows="4" required></textarea>
+
+               <button type="submit" class="btn btn-info btn-sm mt-4 btn-theme"
+                  [disabled]="!contactForm.valid">Send</button>
+            </form>
+         </ng-template>
+         <div class="text-center">
+            <button class="btn btn-info btn-sm mt-4 btn-theme" routerLink="/">Back to Home</button>
+         </div>
+      </div>
+   </div>
+</section>
