--- a/src/app/comments/comment-form/comment-form.component.html
+++ b/src/app/comments/comment-form/comment-form.component.html
@@ -2,15 +2,20 @@
    <div class="card-body">
       <h1>Leave a comment</h1>
       <p>You can leave a comment using this comment form</p>
-   <form>
+   <form [formGroup]="commentForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
          <label for="">Name</label>
-         <input type="text" class="form-control" placeholder="Enter your name here">
+         <input type="text" name="name" required formControlName="name" class="form-control" placeholder="Enter your name here">
+      </div>
+
+      <div class="form-group">
+         <label for="">Email</label>
+         <input type="text" name="email" required formControlName="email" class="form-control" placeholder="Enter your email here">
       </div>
       
       <div class="form-group mt-3">
          <label for="">Comment</label>
-         <textarea cols="30" rows="10" class="form-control shadow-effect" placeholder="Add you comments here"></textarea>
+         <textarea cols="30" rows="10" required name="commentText" formControlName="commentText" class="form-control shadow-effect" placeholder="Add you comments here"></textarea>
       </div>
       <button class="btn btn-info mt-3 btn-theme">Add a comment</button>
    </form>
