--- a/src/app/layouts/category-navbar/category-navbar.component.html
+++ b/src/app/layouts/category-navbar/category-navbar.component.html
@@ -1,11 +1,21 @@
 <nav class="navbar navbar-expand-lg fixed-top">
    <div class="container">
       <div class="collapse navbar-collapse justify-content-center">
-         <ul class="navbar-nav" *ngFor="let category of categoryArray">
+         <ul class="navbar-nav">
             <li class="nav-item ml-3">
-            <a href="" class="nav-link" [routerLink]="['/category',category.data.category, category.id]">{{category.data.category}}</a>
-         </li>
-      </ul>
+               <a href="" class="nav-link" [routerLink]="['/']">Home</a>
+            </li>
+         </ul>
+         <ul class="navbar-nav" *ngFor="let category of categoryArray">
+            <li class="nav-item ml-3" *ngIf="category.data.contentType === 'Blog'">
+               <a href="" class="nav-link"
+                  [routerLink]="['/category',category.data.category, category.id]">{{category.data.category}}</a>
+            </li>
+            <li class="nav-item ml-3" *ngIf="category.data.contentType === 'Tutorial'">
+               <a href="" class="nav-link"
+                  [routerLink]="['/tutorial',category.data.category, category.id]">{{category.data.category}}</a>
+            </li>
+         </ul>
       </div>
    </div>
 </nav>
