--- a/src/app/layouts/post-card/post-card.component.html
+++ b/src/app/layouts/post-card/post-card.component.html
@@ -3,12 +3,12 @@
    <div class="card-body">
    <small class="bg-light text-danger text-center"> {{postData.data.category.category}} </small>
    
-   <small class="bg-light text-success text-center ml-3"> Featured </small>
-   
-   <small class="bg-light text-info text-center ml-3"> Views- {{postData.data.views}} </small>
+   <!-- <small class="bg-light text-success text-center ml-3" *ngIf="postData.data.isFeatured"> Featured </small>
+    -->
+   <!-- <small class="bg-light text-info text-center ml-3"> Views- {{postData.data.views}} </small> -->
    <h5 class="mt-1"> {{postData.data.title}}</h5>
-   <p>{{postData.data.excerpt}}</p>
-   <small class="bg-light text-warning text-center ml-3">LAST UPDATED - {{postData.data.createdAt.toMillis() | date}}</small>
-   
+   <p class="ellipsis">{{postData.data.excerpt}}</p>
+   <!-- <small class="bg-light text-warning text-center ml-3">LAST UPDATED - {{postData.data.createdAt.toMillis() | date}}</small>
+    -->
 </div>
 </div>
