changes into post cards

--- a/src/app/layouts/post-card/post-card.component.html
+++ b/src/app/layouts/post-card/post-card.component.html
@@ -7,7 +7,7 @@
     -->
    <!-- <small class="bg-light text-info text-center ml-3"> Views- {{postData.data.views}} </small> -->
    <h5 class="mt-1"> {{postData.data.title}}</h5>
-   <p class="ellipsis">{{postData.data.excerpt}}</p>
+   <!-- <p class="ellipsis">{{postData.data.excerpt}}</p> -->
    <!-- <small class="bg-light text-warning text-center ml-3">LAST UPDATED - {{postData.data.createdAt.toMillis() | date}}</small>
     -->
 </div>
