--- a/src/app/layouts/post-card/post-card.component.html
+++ b/src/app/layouts/post-card/post-card.component.html
@@ -1,12 +1,12 @@
 <div class="card shadow-effect" *ngIf="postData?.data" [routerLink]="['/post', postData.id]">
    <img src='{{postData.data.postImgPath}}' alt="post image" class="card-img-top">
-   <div class="card-body">
+   <div class="card-body container-multiline">
    <small class="bg-light text-danger text-center"> {{postData.data.category.category}} </small>
    
    <!-- <small class="bg-light text-success text-center ml-3" *ngIf="postData.data.isFeatured"> Featured </small>
     -->
    <!-- <small class="bg-light text-info text-center ml-3"> Views- {{postData.data.views}} </small> -->
-   <h5 class="mt-1"> {{postData.data.title}}</h5>
+   <h5 class="mt-1 ellipsis-multiline"> {{postData.data.title}}</h5>
    <!-- <p class="ellipsis">{{postData.data.excerpt}}</p> -->
    <!-- <small class="bg-light text-warning text-center ml-3">LAST UPDATED - {{postData.data.createdAt.toMillis() | date}}</small>
     -->
