--- a/src/app/comments/comments-list/comments-list.component.css
+++ b/src/app/comments/comments-list/comments-list.component.css
@@ -30,7 +30,7 @@
  
  /* Button Styles */
  button {
-   background-color: var(--primary-color);
+   background-color: #138496;
    color: white;
    border: none;
    border-radius: 5px;
