change for links

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<!-- Main News Slider Start -->
+<!-- Main Slider Start -->
 <div class="container-fluid">
    <div class="row">
        <div class="col-lg-7 px-0">
@@ -35,8 +35,8 @@
        </div>
    </div>
 </div>
-<!-- Main News Slider End -->
-<!-- Breaking News Start -->
+<!-- Main   Slider End -->
+<!-- Breaking   Start -->
 <div class="container-fluid bg-dark py-3 mb-3">
    <div class="container">
        <div class="row align-items-center bg-dark">
@@ -52,7 +52,7 @@
        </div>
    </div>
 </div>
-<!-- Breaking News End -->
+<!-- Breaking   End -->
 <section class="container mt-5">
    <div class="col-md-12 text-center">
       <h2> Featured Posts</h2>
