--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -9,11 +9,10 @@
               <p class="font-weight-medium"><i class="fa fa-envelope mr-2"></i>info@codemasterylab.com</p>
               <h6 class="mt-4 mb-3 text-white text-uppercase font-weight-bold">Follow Us</h6>
               <div class="d-flex justify-content-start">
-                  <a class="btn btn-lg btn-secondary btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                  <a class="btn btn-lg btn-secondary btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                  <a class="btn btn-lg btn-secondary btn-lg-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                  <a class="btn btn-lg btn-secondary btn-lg-square mr-2" href="#"><i class="fab fa-instagram"></i></a>
-                  <a class="btn btn-lg btn-secondary btn-lg-square" href="#"><i class="fab fa-youtube"></i></a>
+                  <a class="btn btn-lg btn-secondary btn-lg-square mr-2" href="https://www.facebook.com/profile.php?id=61550703416365"><i class="fab fa-facebook-f"></i></a>
+                  <a class="btn btn-lg btn-secondary btn-lg-square mr-2" href="www.linkedin.com/in/codemastery-lab-276ba7289"><i class="fab fa-linkedin-in"></i></a>
+                  <a class="btn btn-lg btn-secondary btn-lg-square mr-2" href="https://www.instagram.com/codemastery1"><i class="fab fa-instagram"></i></a>
+                  <a class="btn btn-lg btn-secondary btn-lg-square" href="https://www.youtube.com/@codemasterylab"><i class="fab fa-youtube"></i></a>
               </div>
           </div>
           <!-- <div class="col-lg-3 col-md-6 mb-5">
