--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -17,22 +17,16 @@
            <nav class="navbar navbar-expand-sm bg-dark p-0">
                <ul class="navbar-nav ml-auto mr-n2">
                    <li class="nav-item">
-                       <a class="nav-link text-body" href="#"><small class="fab fa-twitter"></small></a>
+                       <a class="nav-link text-body" href="https://www.facebook.com/profile.php?id=61550703416365"><small class="fab fa-facebook-f"></small></a>
                    </li>
                    <li class="nav-item">
-                       <a class="nav-link text-body" href="#"><small class="fab fa-facebook-f"></small></a>
+                       <a class="nav-link text-body" href="www.linkedin.com/in/codemastery-lab-276ba7289"><small class="fab fa-linkedin-in"></small></a>
                    </li>
                    <li class="nav-item">
-                       <a class="nav-link text-body" href="#"><small class="fab fa-linkedin-in"></small></a>
+                       <a class="nav-link text-body" href="https://www.instagram.com/codemastery1"><small class="fab fa-instagram"></small></a>
                    </li>
                    <li class="nav-item">
-                       <a class="nav-link text-body" href="#"><small class="fab fa-instagram"></small></a>
-                   </li>
-                   <li class="nav-item">
-                       <a class="nav-link text-body" href="#"><small class="fab fa-google-plus-g"></small></a>
-                   </li>
-                   <li class="nav-item">
-                       <a class="nav-link text-body" href="#"><small class="fab fa-youtube"></small></a>
+                       <a class="nav-link text-body" href="https://www.youtube.com/@codemasterylab"><small class="fab fa-youtube"></small></a>
                    </li>
                </ul>
            </nav>
