--- a/src/app/tutorial/tutorial.component.css
+++ b/src/app/tutorial/tutorial.component.css
@@ -7,9 +7,8 @@
  }
  
  .sidebar {
-   flex: 1;
+   flex: 0.4;
    background-color: #f1f1f1;
-   max-width: 20%;
  }
  
  .sidebar ul {
@@ -31,7 +30,9 @@
    background-color: #fff;
    padding: 20px;
    border-left: 1px solid #ddd;
-   overflow-x: auto;
+   overflow: hidden;
+   word-wrap: break-word;
+   white-space: normal;
  }
  
  .content h2 {
