--- a/src/app/tutorial/tutorial.component.css
+++ b/src/app/tutorial/tutorial.component.css
@@ -46,3 +46,10 @@
    color: black;
  }
  
+ :host::ng-deep pre {
+    display: block;
+    font-size: 87.5%;
+    background-color: black;
+    color: white;
+    padding: 15px;
+}
