--- a/src/app/layouts/category-navbar/category-navbar.component.html
+++ b/src/app/layouts/category-navbar/category-navbar.component.html
@@ -1,7 +1,7 @@
  <!-- Navbar Start -->
  <div class="container-fluid p-0">
    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-2 py-lg-0 px-lg-5">
-       <a href="" [routerLink]="['/']" class="navbar-brand d-block d-lg-none">
+       <a [routerLink]="['/']" class="navbar-brand d-block d-lg-none">
            <h1 class="m-0 display-4 text-uppercase text-primary">Code<span class="text-white font-weight-normal">Mastery</span><span class="text-primary lab">Lab</span></h1>
        </a>
        <button title="menu" type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -9,18 +9,18 @@
        </button>
        <div class="collapse navbar-collapse justify-content-between px-0 px-lg-3" id="navbarCollapse">
            <div class="navbar-nav mr-auto py-0">
-               <a href="" [routerLink]="['/home']" routerLinkActive="active" class="nav-item nav-link">Home</a>
+               <a [routerLink]="['/home']" routerLinkActive="active" class="nav-item nav-link">Home</a>
                <div *ngFor="let category of categoryArray">
                   <div class="nav-item" *ngIf="category.data.contentType != 'Tutorial'">
-                     <a href="" routerLinkActive="active" class="nav-link"
-                     [routerLink]="['/category',category.data.category, category.id]">{{category.data.category}}</a>
+                     <a routerLinkActive="active" class="nav-link"
+                     [routerLink]="['/category', getSlug(category.data.category), category.id]">{{category.data.category}}</a>
                   </div>
                   <div  class="nav-item" *ngIf="category.data.contentType === 'Tutorial'">
-                     <a href="" routerLinkActive="active" class="nav-link"
-                     [routerLink]="['/tutorial',category.data.category, category.id]">{{category.data.category}}</a>
+                     <a routerLinkActive="active" class="nav-link"
+                     [routerLink]="['/tutorial', getSlug(category.data.category), category.id]">{{category.data.category}}</a>
                   </div>
                </div>
-               <a href="" routerLinkActive="active" [routerLink]="['/contact']" class="nav-item nav-link">Contact</a>
+               <a routerLinkActive="active" [routerLink]="['/contact']" class="nav-item nav-link">Contact</a>
            </div>
        </div>
    </nav>
