--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -55,23 +55,23 @@
               <h5 class="mb-4 text-white text-uppercase font-weight-bold">Pages</h5>
               <div class="row">
                   <div class="col-12 mb-3">
-                      <a href="" routerLink="/home">Home</a>
+                      <a routerLink="/home">Home</a>
                   </div>
                   <div class="col-12 mb-3">
-                     <a href="" routerLink="/about">About</a>
+                     <a routerLink="/about">About</a>
                  </div>
                  <div class="col-12 mb-3">
-                  <a href=""routerLink="/terms-and-condtions">Terms & Conditions</a>
+                  <a routerLink="/terms-and-condtions">Terms & Conditions</a>
               </div>
               <div class="col-12 mb-3">
-               <a href=""routerLink="/contact">Contact us</a>
+               <a routerLink="/contact">Contact us</a>
            </div>
               </div>
           </div>
       </div>
   </div>
   <div class="container-fluid py-4 px-sm-3 px-md-5" style="background: #111111;">
-      <p class="m-0 text-center">&copy; <a href="#">Code Mastery Lab</a>. All Rights Reserved. 
+      <p class="m-0 text-center">&copy; <a href="/">Code Mastery Lab</a>. All Rights Reserved. 
   </div>
   <!-- Footer End -->
 </footer>
