--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -40,8 +40,8 @@
 </div>
 <section class="container mt-5">
    <div class="col-md-12 text-center">
-      <h2> Latest Posts</h2>
-      <p>Embark on a journey of discovery with our 'Latest Posts' collection, where innovation meets insight in real time. Uncover the freshest perspectives on technology, trends, and transformations that are shaping the present and defining the future. Stay ahead of the curve as we bring you the pulse of progress, one post at a time.</p>
+      <h2> The Best Place to Find Interview Questions for Different Technologies and Blogs</h2>
+      <p>Code mastery lab is a website that provides interview questions for different technologies and blogs. We have a team of experienced engineers and writers who create high-quality questions that are relevant to the latest industry trends. Our questions are designed to help you prepare for your next interview and land your dream job.</p>
    </div>
    <div class="row">
       <div class="col-md-4 mt-3" *ngFor="let latestPost of latestPosts">
