--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -6,20 +6,20 @@
          <p>Welcome to Code Mastery Lab, your hub for exploration, learning, and growth!</p>
 
          <h2>Our Vision</h2>
-         <p>We envision a future where knowledge knows no bounds. Our commitment lies in breaking down barriers to
-            education and making learning accessible to all. We believe in the transformative power of information and
-            the boundless potential it holds.</p>
+         <p>Code mastery lab was founded in 2023 by two engineers who were passionate about helping others succeed in their careers. We believe that everyone should have access to high-quality interview questions, regardless of their experience level. That's why we offer our questions for free to everyone.
+
+            We have a team of experienced engineers and writers who create our questions. They are all experts in their respective fields, and they are constantly staying up-to-date on the latest industry trends. This ensures that our questions are always relevant and up-to-date.
+            
+            In addition to our interview questions, we also offer a variety of other resources to help you prepare for your next interview. These resources include blog posts, articles, and video tutorials.
+            
+            We are committed to helping you succeed in your career. That's why we offer our services for free. We believe that everyone should have the opportunity to achieve their dreams.
+            </p>
 
          <h2>What We Offer</h2>
          <ul>
             <li><strong>Technology & Coding:</strong> Delve into the digital realm with our comprehensive tutorials and
                articles that demystify the world of technology and coding.</li>
-            <li><strong>Health & Well-being:</strong> Explore our insights into health, fitness, and holistic living.
-            </li>
-            <li><strong>Fashion & Style:</strong> Discover the art of self-expression through fashion.</li>
-            <li><strong>Sports & Adventure:</strong> Dive into the world of sports and adventure with our articles that
-               capture the thrill of the game and the spirit of exploration.</li>
-         </ul>
+            </ul>
 
          <h2>Our Team</h2>
          <p>Behind every word and tutorial lies a team of passionate individuals who are experts in their respective
